methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:20: error: not found: value isFacingTraile
  while(isFacingTraile()==false){
        ^