methods.slug.SlugHunting.scala.code

def isFacingTrail():Boolean = {
  if(estFaceMur()==true){
    return false
  }else{
    avance()
    if(getCouleurSol()==Color.green){
      recule()
      return true
    }else{
      recule()
      return false
    }
  }
}


def hunt() {
  while(isFacingTraile()==false){
    gauche()
  }
  avance()
  baisseBrosse()
  leveBrosse()
  if(estSurBiscuit()==true){
    prendBiscuit()
  }
}